--- a/login.html
+++ b/login.html
@@ -12,10 +12,10 @@
 <body>
 
     <div class="container d-flex justify-content-center">
-        <img src="img/Logo_QMado.png" alt="Logo" ">
+        <img src="img/Logo_QMado.png" alt="Logo">
     </div>
 
-    <form class="container border border-danger  ">
+    <form class="container border border-danger mb-4  ">
         
         <div class="form-outline mb-4">
           <input type="text"  class="form-control" />
