--- a/editar.html
+++ b/editar.html
@@ -42,15 +42,28 @@
       </nav>
 
       <div class="container">
+   
+        <form action="" method="post">
+          <label for="comentario">Comentario</label>
+          <input type="text">
+          <label for=""></label>
+          
+          <input type="radio" value="Entregado">Entregado
+          <input type="radio" value="Cliente no encontrado">cliente no encontrado
+          <input type="radio" value="Perdio">perdido
+          <input type="radio" value="Comentario">Comentario
+        </form>
         <caption>Pedidos</caption>
-        <table class="spa">
+        <table class="table">
             <thead>
                 <tr>
                     <th>#</th>
                     <th>Numero de pedido</th>
-                    <th>Numero de bultos</th>
+                    <th>Direccion</th>
                     <th>Hora de entrega</th>
                     <th>Peso</th>
+                    
+
                 </tr>
             </thead>
             <tbody>
