--- a/editar.html
+++ b/editar.html
@@ -16,15 +16,15 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navbarNavDropdown">
-      <ul class="navbar-nav justify-content-around align-items-center flex-grow-1 pe-3">
-        <li class="nav-item">
+      <ul class="navbar-nav flex-row justify-content-around align-items-center flex-grow-1 pe-3">
+        <li class="nav-item margin mb-2">
           <a class="nav-link" href="index.html">Pedidos <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item logui">
-          <img class="logo" src="img/Logo_QMado.png" alt="logo">
+        <li class="nav-item logui mb-2">
+          <img class="logo mb-2" src="img/Logo_QMado.png" alt="logo">
         </li>
-        <li class="nav-item">
-            <a href="#" class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#FF003F" class="bi bi-person-circle" viewBox="0 0 16 16">
+        <li class="nav-item margin2">
+            <a href="#" class="dropdown-toggle mb-2" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#FF003F" class="bi bi-person-circle" viewBox="0 0 16 16">
                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
               </svg></a>
