--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container d-flex justify-content-center">
-        <img src="img/Logo_QMado.png" alt="Logo">
+        <img src="img/Logo_QMado.png" alt="Logo" id="logologin">
     </div>
 <div class="container w-50 pt-5 mt-2 rounded bg-danger formulario">
     <form class="container text-white">
