--- a/detalle.html
+++ b/detalle.html
@@ -108,5 +108,17 @@
   <div class="container d-flex justify-content-end py-5">
   <a type="button" class="btn btn-danger" href="index.html">Volver</a>
 </div>
+
+<div class="container">
+  <footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Direccion</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Dudas</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contacto</a></li>
+    </ul>
+    <p class="text-center text-muted">© 2022 QMADO</p>
+  </footer>
+</div>
 </body>
 </html>
