Acordeon y mapa fixed

--- a/detalle.html
+++ b/detalle.html
@@ -46,12 +46,12 @@
   <main>
     <h1 class="text-center pt-5">Número de pedido:</h1>
     <h2 class="text-center">4565675RT</h2>
-    <div class="d-flex justify-content-around align-items-center mt-5">
-    <div class="card g-5 w-75 border-3" >
+    <div class="grandiv">
+    <div class="card border-3 div" >
       
-      <div class="accordion" id="accordionExample">
+      <div class="accordion p-0 " id="accordionExample">
         <div class="card">
-          <div class="card-header" id="headingOne">
+          <div class="card-header py-3" id="headingOne">
             <h2 class="mb-0">
               <button class="btn" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 Informacion pedido:
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-header" id="headingTwo">
+          <div class="card-header py-3" id="headingTwo">
             <h2 class="mb-0">
               <button class="btn collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                 Informacion de la direccion:
@@ -77,7 +77,7 @@
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body">
- <p>Provincia</p>
+              <p>Provincia</p>
               <p>Localidad</p>
               <p>Codigo postal</p>
               <p>Nombre de la via</p>
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-header" id="headingThree">
+          <div class="card-header py-3" id="headingThree">
             <h2 class="mb-0">
               <button class="btn collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                 Modificar pedido
@@ -99,11 +99,11 @@
           </div>
         </div>
     </div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3169.518826048664!2d-5.9275161847349995!3d37.40121007982922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126f0d94333a4b%3A0xc801daeab863a6fe!2sVirtualSoft%20Studios!5e0!3m2!1ses!2ses!4v1679307951312!5m2!1ses!2ses"  style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
-  
-
-
+  <div class="div">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3169.518826048664!2d-5.9275161847349995!3d37.40121007982922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126f0d94333a4b%3A0xc801daeab863a6fe!2sVirtualSoft%20Studios!5e0!3m2!1ses!2ses!4v1679307951312!5m2!1ses!2ses"  style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+</div>
   </main>
   <div class="container d-flex justify-content-end py-5">
   <a type="button" class="btn btn-danger" href="index.html">Volver</a>
